# test_wasm_platform_specific_dependencies

./: README.md  pyproject.toml
conda/: meta.yaml
